# weaviate-rust-client

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
