[package]
name = "weaviate-client"
authors = ["Parker Duckworth <parkerduckworth@gmail.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/weaviate/weaviate-rust-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
