[package]
name = "weaviate-client"
version = "0.1.0"
description = "Official client library to interact with Weaviate"
repository = "https://github.com/weaviate/weaviate-rust-client"
license-file = "LICENSE"
authors = ["Parker Duckworth <parkerduckworth@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
